# cursor-hackathon-submission

./: .gitignore
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 1765006151_initial.py  1765009125_more_fields_to_calls.py  1765013355_add_bank_account_title.py  1765014943_remove_currency.py  1765024838_add_bill_entity.py  1765025887_delete_tool_call_table.py  1765026171_delete_tool_call_table.py  1767675469_initial_v2.py  2_add_otps_table.py
backend/src/: db.py  main.py  settings.py
backend/src/core/calls/: build_payload.py  initiate_call.py
backend/src/core/tools/: __init__.py  account_management.py  bills.py  transfer_money.py
backend/src/entrypoints/api/: serializers.py  server.py
backend/src/entrypoints/background_jobs/: main.py
backend/src/infrastructure/: db.py  models.py  repositories.py
backend/src/scripts/: create_db_tables.py
frontend/: AGENTS.md  README.md  env.example  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: all-users.tsx  create-account-dialog.tsx  hero.tsx  logout.tsx  members-table.tsx  mode-switcher.tsx  onboarding-dialog.tsx  organization-switcher.tsx  sidebar.tsx  theme-provider.tsx
frontend/db/: backend-db.ts  drizzle.ts  schema.ts  tibd.ts
frontend/lib/: auth-client.ts  auth.ts  local-storage.ts  use-polling.ts
frontend/migrations/: 0001_loving_wolf_cub.sql
frontend/scripts/: test-db-connection.ts
frontend/server/: members.ts  organizations.ts  users.ts
frontend/types/: otp.ts  (+2 more)
(+33 files in other folders)
